added small design details and general polish

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div id="profile">
                 <input type="text" placeholder="Search">
                 <div id="user">
-                    <p>@joerandom123</p>
-                    <h1>Joe Random</h1>
+                    <p>@joemamaisahoe</p>
+                    <h1>Joe Mama</h1>
                 </div>
                 <div id="buttons">
                     <button>New</button>
@@ -61,10 +61,12 @@
                             <h4>Site Maintenance</h4>
                             <p>The quick brown fox jumps over the lazy dog.</p>
                         </div>
+                        <hr>
                         <div>
                             <h4>Community Share Day</h4>
                             <p>The quick brown fox jumps over the lazy dog.</p>
                         </div>
+                        <hr>
                         <div>
                             <h4>Updated Privacy Policy</h4>
                             <p>The quick brown fox jumps over the lazy dog.</p>
@@ -73,20 +75,23 @@
                     <div id="trending">
                         <h2>Trending</h2>
                         <div>
-                            <h4>@tegan</h4>
+                            <h4>@deezwhat</h4>
                             <p>Brand New App</p>
                         </div>
+                        <hr>
                         <div>
-                            <h4>@morgan</h4>
+                            <h4>@bootybandit</h4>
                             <p>Uber Cool Project</p>
                         </div>
+                        <hr>
                         <div>
-                            <h4>@kendall</h4>
+                            <h4>@myspacetom</h4>
                             <p>Life Changing App</p>
                         </div>
+                        <hr>
                         <div>
-                            <h4>@alex</h4>
-                            <p>No Traffic Maker</p>
+                            <h4>@falsumit</h4>
+                            <p>Lame Dashboard</p>
                     </div>
                 </div>
             </div>
