--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://falsumit.github.io/normalize.css/normalize.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,600,0,0" />
     <link rel="stylesheet" href="./style.css">
     <title>Dashboard</title>
 </head>
 <body>
     <div id="navbar">
-        <p id="logo">Dashboard</p>
-        <p id="burger">Menu</p>
-        <p id="avatar">Photo</p>
+        <p id="logo"><span class="material-symbols-outlined">dataset</span> Dashboard</p>
+        <p id="burger"><span class="material-symbols-outlined">menu</span> Menu</p>
+        <p id="avatar"><span class="material-symbols-outlined">account_circle</span> Joe Mama</p>
     </div>
     <div id="container">
         <div id="main">
@@ -56,7 +57,7 @@
                 </div>
                 <div id="social">
                     <div id="announcements">
-                        <h2>Announcements</h2>
+                        <h2><span class="material-symbols-outlined">notifications_active</span> Announcements</h2>
                         <div>
                             <h4>Site Maintenance</h4>
                             <p>The quick brown fox jumps over the lazy dog.</p>
@@ -73,25 +74,25 @@
                         </div>
                     </div>
                     <div id="trending">
-                        <h2>Trending</h2>
+                        <h2> <span class="material-symbols-outlined">trending_up</span> Trending</h2>
                         <div>
-                            <h4>@deezwhat</h4>
-                            <p>Brand New App</p>
+                            <h4>Brand New App</h4>
+                            <p>@deezwhat</p>
                         </div>
                         <hr>
                         <div>
-                            <h4>@bootybandit</h4>
-                            <p>Uber Cool Project</p>
+                            <h4>Uber Cool Project</h4>
+                            <p>@bootybandit</p>
                         </div>
                         <hr>
                         <div>
-                            <h4>@myspacetom</h4>
-                            <p>Life Changing App</p>
+                            <h4>Life Changing App</h4>
+                            <p>@myspacetom</p>
                         </div>
                         <hr>
                         <div>
-                            <h4>@falsumit</h4>
-                            <p>Lame Dashboard</p>
+                            <h4>Lame Dashboard</h4>
+                            <p>@falsumit</p>
                     </div>
                 </div>
             </div>
